# server.js
@@ -8,6 +8,9 @@ const authorsRoutes = require('./routes/authorsRoutes');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
+const passport = require("passport");
+require("./auth/githubAuth");
+
 const app = express();
 
 // Middleware
@@ -20,6 +23,31 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 // Routes
 app.use('/books', booksRoutes);
 app.use('/authors', authorsRoutes);
+
+app.use(require("express-session")({
+  secret: process.env.SESSION_SECRET,
+  resave: false,
+  saveUninitialized: false
+}));
+
+app.use(passport.initialize());
+app.use(passport.session());
+
+// GitHub OAuth routes
+app.get("/auth/github", passport.authenticate("github", { scope: ["user:email"] }));
+
+app.get("/auth/github/callback",
+  passport.authenticate("github", { failureRedirect: "/" }),
+  (req, res) => {
+    res.json({ message: "GitHub login successful", user: req.user });
+  }
+);
+
+app.get("/auth/logout", (req, res) => {
+  req.logout(() => {
+    res.json({ message: "Logged out" });
+  });
+});
 
 // Default
 app.get('/', (req, res) => res.send("CSE341 Project API running"));
